# tui-textarea

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: branch-protection-main.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_request.md  config.yml  feature_request.md
.github/workflows/: check.yml  ci.yml  clippy.yml  coverage.yml  cross-platform.yml  fmt.yml  release-after-merge.yml  release.yml  test.yml
bench/: Cargo.toml  README.md
bench/benches/: cursor_char.rs  cursor_edge.rs  cursor_paragraph.rs  cursor_word.rs  delete_char.rs  delete_line.rs  delete_word.rs  insert_append.rs  insert_long.rs  insert_random.rs  search_backward.rs  search_forward.rs  undo_redo.rs  wrap_render.rs
bench/src/: lib.rs
examples/: editor.rs  tuirs_editor.rs  variable.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: search.rs  selection.rs  undo_redo.rs  wrap_render.rs
src/: cursor.rs  highlight.rs  lib.rs  textarea.rs  util.rs  widget.rs  word.rs  wrap.rs
src/input/: mod.rs
tests/: input.rs  measure.rs  textarea.rs  wrap.rs
